k8s2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
  namespace: simple-ingress-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: app-container
        image: yashmane108/devopssssss-app:30
        ports:
        - containerPort: 3000
