k8s2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-svc
  namespace: simple-ingress-ns
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
